typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames42_ES6.ts.stderr
error: ClassPropertyInitRequired {
    span: Span {
        lo: BytePos(
            266,
        ),
        hi: BytePos(
            276,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames42_ES6.ts:9:5
  |
9 |     [""]: Foo;
  |     ^^^^^^^^^^

